<resources>
    <string name="app_name">Metro Madrid Appcessible</string>
    <string name="button_route">Find your route</string>
    <string name="index_title">Metro Madrid</string>
    <string name="index_title3">Appcessible</string>
    <string name="example">FROM</string>
    <string name="example2">TO</string>
    <string name="radioButton1">Less transfers</string>
    <string name="radioButton2">Less stations</string>
    <string name="buttonGo">GO!</string>
    <string name="buttonRouteDetails">Route details</string>
    <string name="buttonNewRoute">NEW ROUTE</string>
    <string name="lookStation">Locate a station...</string>
    <string name="routeCriteria">ROUTE CRITERIA</string>
    <string name="tituloEstaciones">"Accesible route between:" </string>
    <string name="infoLine">Line </string>
    <string name="estacion">Station  </string>
    <string name="noAccesible">   is NOT accessible. Nearest accessible station </string>
    <string name="transbordo">CHANGE IN : </string>
    <string name="totalEstaciones">Stations :  </string>
    <string name="totalTransbordos">Transfers :  </string>
    <string name="textPerson">Hey! You are here!</string>
    <string name="estacionNoAccesible">(Not Accessible)</string>
    <string name="estacionAccesible">(Accessible)</string>
    <string name="estacionSinArticulo">Station : </string>
    <string name="errorValidStations">You must choose two valid stations</string>
    <string name="errorValidDisability">You must choose at least one accessibility option</string>
    <string name="changeStation">Transfer from line</string>
    <string name="toLine">to line</string>
    <string name="accesibility">ACCESSIBILITY</string>
    <string name="index">OPEN</string>
    <string name="permission">Metro Madrid Appcessible needs this permission to work</string>
    <string name="errorSameStations">Origin and destination cannot be the same station</string>
    <string name="errorNoExisteRuta">Does not exist an accesible route between selected stations</string>
</resources>

