<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_index"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.miguel.metromadappcesible.activities.IndexActivity"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_app"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/imageView2"
            android:background="@android:color/transparent"
             />

        <TextView
            android:text="@string/index_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titulo"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold"
            android:textSize="44sp"
            android:textAlignment="center"
            android:background="@android:color/background_light"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginTop="27dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index_title3"
            android:id="@+id/textView2"
            android:textSize="44sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textStyle="normal|bold"
            android:background="@android:color/background_light"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginBottom="25dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonOpenMain"
            android:background="@drawable/shape"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:minWidth="150dp"
            android:textColor="@color/colorAccent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:onClick="map" />
</RelativeLayout>
