<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_routes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miguel.metromadappcesible.activities.RoutesActivity"
    android:paddingLeft="@dimen/paddingRutas"
    android:background="@color/backgroundGray"
    android:paddingRight="@dimen/paddingRutas">


    <Button
        android:text="@string/buttonGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonGo"

        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="solution"
        android:background="@drawable/shape"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"/>


    <RadioGroup
        android:layout_width="match_parent"
        android:weightSum="1"
        android:checkedButton="@+id/radioButtonChanges"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"

        android:layout_above="@+id/buttonGo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp">

        <RadioButton
            android:text="@string/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonChanges"
            android:checked="true"
            android:visibility="visible"
            android:layout_marginTop="40dp"
            android:textColorLink="@color/colorAccent"
            android:textSize="@dimen/textRuta"
            android:textStyle="normal|bold"
            android:textCursorDrawable="@color/colorAccent"

            android:buttonTint="@color/colorAccent"
            android:layout_marginRight="10dp" />

        <RadioButton
            android:text="@string/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonStations"
            android:visibility="visible"
            android:requiresFadingEdge="vertical"
            android:layout_alignTop="@+id/radioGroup2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="@dimen/margenRadioButton"
            android:textSize="@dimen/textRuta"
            android:textStyle="normal|bold"
            android:buttonTint="@color/colorAccent" />

    </RadioGroup>

    <TextView
        android:minHeight="90dp"
        android:background="@drawable/shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/containerStations"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView

        android:minHeight="@dimen/heightRoutesButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/containerBlindness"
        android:background="@drawable/shape"

        android:layout_marginTop="20dp"
        android:layout_below="@+id/containerWheelChair"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:minHeight="@dimen/heightRoutesButtons"
        android:background="@drawable/shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/containerDeafness"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/containerBlindness"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:minHeight="@dimen/heightRoutesButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:id="@+id/containerWheelChair"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/containerStations"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchWheelChair"
        android:checked="true"
        android:layout_alignBottom="@+id/containerWheelChair"
        android:layout_alignRight="@+id/buttonGo"
        android:layout_alignEnd="@+id/buttonGo"
        android:paddingBottom="0dp"
        android:layout_marginBottom="7dp" />
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchBlindness"
        android:layout_alignBottom="@+id/containerBlindness"
        android:layout_alignLeft="@+id/switchWheelChair"
        android:layout_alignStart="@+id/switchWheelChair"
        android:layout_marginBottom="7dp" />
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchDeafness"
        android:layout_alignBottom="@+id/containerDeafness"
        android:layout_alignLeft="@+id/switchBlindness"
        android:layout_alignStart="@+id/switchBlindness"
        android:layout_marginBottom="7dp" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoCompleteDestination"
        android:textColor="@android:color/black"
        android:hint="@string/example2"
        android:textColorLink="@color/colorAccent"
        android:textColorHighlight="@color/colorAccent"
        android:inputType="textNoSuggestions"

        android:textCursorDrawable="@color/colorAccent"
        android:textSize="18sp"

        android:layout_above="@+id/containerWheelChair"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoCompleteOrigin"
        android:textColor="@android:color/black"

        android:hint="@string/example"

        android:inputType="textNoSuggestions"
        android:textColorLink="@color/colorAccent"
        android:textCursorDrawable="@color/colorAccent"

        android:layout_above="@+id/autoCompleteDestination"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp" />

</RelativeLayout>
